<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fabiogomesrocha.agilesergile.MainActivity">

    <LinearLayout
        android:layout_width="373dp"
        android:layout_height="499dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        tools:ignore="MissingConstraints">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="361dp"
            android:layout_height="189dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@mipmap/ic_logo_agilesergipe"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:layout_width="361dp"
            android:layout_height="54dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.468"
            tools:text="@string/titulo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="360dp"
            android:layout_height="67dp"
            tools:layout_editor_absoluteX="44dp"
            tools:layout_editor_absoluteY="291dp"
            tools:text="@string/diaum" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="361dp"
            android:layout_height="92dp"
            tools:layout_editor_absoluteX="44dp"
            tools:layout_editor_absoluteY="371dp"
            tools:text="@string/diadois" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="361dp"
            android:layout_height="wrap_content"
            android:text="Universidade Tiradentes - Farolandia, Aracaju/SE"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="476dp"
            tools:text="@string/local" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
